k8s_3tier/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          #- path: /health
            #pathType: Prefix
            #backend:
              #service:
                #name: backend-service
                #port:
                  #number: 80
